--- a/public/index.html
+++ b/public/index.html
@@ -24,10 +24,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Parveen's Box</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <h1>Parveen's calculator</h1>
     <div id="root"></div>
     <!--
       This HTML file is a template.
